General restructure of the block layout code in order to make list tabstops become part of the normal tabs as mandated by odf spec.

This also introduces a check if the label is there at all. if no label then no tabstop either (I guess
the resoning is that it has nothing to follow). This helps on non numerated headings
BUG:278260