libs/textlayout/KoTextLayoutArea.cpp
@@ -876,24 +876,30 @@ bool KoTextLayoutArea::layoutBlock(FrameIterator *cursor)
     }
 
     //========
-    // Margins (and restart a paragraph continuing from previous other area)
+    // Margins
     //========
     qreal leftMargin = pStyle.leftMargin();
     qreal rightMargin = pStyle.rightMargin();
+    m_indent = textIndent(block, textList, pStyle);
 
-    m_listIndent = 0;
-    qreal listLabelIndent = 0;
+    qreal labelBoxWidth = 0;
     if (textList) {
-        if (!m_isRtl) {
-            listLabelIndent = blockData->counterSpacing() + blockData->counterWidth();
-        }
-        if (listFormat.boolProperty(KoListStyle::AlignmentMode) == false) {
-            m_listIndent = listFormat.doubleProperty(KoListStyle::Indent) + listLabelIndent;
-        } else {
+        if (listFormat.boolProperty(KoListStyle::AlignmentMode)) {
+            labelBoxWidth = blockData->counterWidth();
             // according to odf 1.2 17.20 list margin should be used when paragraph margin is
             // not specified (additionally LO/OO uses 0 as condition so we do too)
             if (pStyle.leftMargin() == 0) {
                 leftMargin = listFormat.doubleProperty(KoListStyle::Margin);
+            }
+            Qt::Alignment align = static_cast<Qt::Alignment>(listFormat.intProperty(KoListStyle::Alignment));
+            if (align & Qt::AlignLeft) {
+                m_indent += labelBoxWidth;
+            } else if (align & Qt::AlignHCenter) {
+                m_indent += labelBoxWidth/2;
+            }
+        } else {
+            if (!m_isRtl) {
+                labelBoxWidth = blockData->counterSpacing() + blockData->counterWidth();
             }
         }
     }
@@ -903,8 +909,6 @@ bool KoTextLayoutArea::layoutBlock(FrameIterator *cursor)
     m_x = left() + (m_isRtl ? rightMargin : leftMargin);
 
     m_documentLayout->clearInlineObjectRegistry(block);
-    m_indent = textIndent(block, textList, pStyle);
-    QTextLine line;
 
     //========
     // Tabs
@@ -917,37 +921,7 @@ bool KoTextLayoutArea::layoutBlock(FrameIterator *cursor)
         tabOffset += m_isRtl ? -rightMargin : -leftMargin;
     }
 
-    // Regular interval tabs. Since Qt doesn't handle regular interval tabs offset
-    // by a fixed number (which we need in all cases, we need to create the regular tabs
-    // ourselves.
-    qreal tabStopDistance = pStyle.tabStopDistance();
-    if (tabStopDistance <= 0) {
-        tabStopDistance = m_documentLayout->defaultTabSpacing();
-    }
-
-    qreal position = 0; // first possible position
-    if (!m_documentLayout->relativeTabs(block)) {
-        position = m_isRtl ? rightMargin : leftMargin;
-    }
-
-    if (!tabs.isEmpty()) {
-        position = tabs.last().position;
-    }
-
-    if (position < 0) {
-        position = int(position / tabStopDistance) * tabStopDistance;
-    } else {
-        position = (int(position / tabStopDistance) + 1) * tabStopDistance;
-    }
-    while (position < MaximumTabPos) {
-        KoText::Tab tab;
-
-        tab.position = position;
-        tabs.append(tab);
-        position += tabStopDistance;
-    }
-
-    // Finally make a list of tabs that Qt can use
+    // Make a list of tabs that Qt can use
     QList<QTextOption::Tab> qTabs;
     // Note: Converting to Qt tabs is needed as long as we use Qt for layout, but we
     // loose the posibility to do leader chars.
@@ -968,28 +942,115 @@ bool KoTextLayoutArea::layoutBlock(FrameIterator *cursor)
 
         value += tabOffset * qt_defaultDpiY() / 72.0;
 
-#if QT_VERSION >= 0x040700
-        qTabs.append(QTextOption::Tab(value, kTab.type, kTab.delimiter));
-#else
         QTextOption::Tab tab;
         tab.position = value;
         tab.type = kTab.type;
         tab.delimiter = kTab.delimiter;
         qTabs.append(tab);
-#endif
+    }
+
+    // For some lists we need to add a special list tab according to odf 1.2 19.830 
+    if (textList && listFormat.hasProperty(KoListStyle::TabStopPosition)) {
+        qreal listTab = listFormat.doubleProperty(KoListStyle::TabStopPosition);
+        if (!m_documentLayout->relativeTabs(block)) {
+            // How list tab is defined if fixed tabs:
+            //        listTab
+            //|>-------------------------|
+            //           m_indent
+            //         |---------<|
+            //     LABEL                 TEXT STARTS HERE AND GOES ON
+            //                    TO THE NEXT LINE
+            //|>------------------|
+            //     leftMargin
+            listTab -= leftMargin;
+        } else {
+            // How list tab is defined if relative tabs:
+            // It's relative to leftMargin - list.leftMargin
+            //              listTab
+            //       |>-------------------|
+            //             m_indent
+            //           |---------<|
+            //       LABEL                 TEXT STARTS HERE AND GOES ON
+            //                      TO THE NEXT LINE
+            //|>--------------------|
+            //     leftMargin       |
+            //       |>-------------|
+            //          list.margin
+            listTab -= listFormat.doubleProperty(KoListStyle::Margin);
+        }
+        // How list tab is defined now:
+        //                    listTab
+        //                    |>-----|
+        //           m_indent
+        //         |---------<|
+        //     LABEL                 TEXT STARTS HERE AND GOES ON
+        //                    TO THE NEXT LINE
+        //|>------------------|
+        //     leftMargin
+        listTab -= m_indent;
+
+        // And now listTab is like this:
+        //         x()
+        //         |     listTab
+        //         |>---------------|
+        //           m_indent
+        //         |---------<|
+        //     LABEL                 TEXT STARTS HERE AND GOES ON
+        //                    TO THE NEXT LINE
+        //|>------------------|
+        //     leftMargin
+
+        // conversion here is required because Qt thinks in device units and we don't
+        listTab *= qt_defaultDpiY() / 72.0;
+
+        QTextOption::Tab tab;
+        tab.position = listTab;
+        tab.type = m_isRtl ? QTextOption::RightTab : QTextOption::LeftTab;
+        qTabs.append(tab);
     }
 
     // We need to sort as the MaximumTabPos may be converted to a value that really
-    // should be in the middle of the list
+    // should be in the middle, and listtab needs to be sorted in too
     qSort(qTabs.begin(), qTabs.end(), compareTab);
+
+    // Regular interval tabs. Since Qt doesn't handle regular interval tabs offset
+    // by a fixed number we need to create the regular tabs ourselves.
+    qreal tabStopDistance = pStyle.tabStopDistance() * qt_defaultDpiY() / 72.0;
+    if (tabStopDistance <= 0) {
+        tabStopDistance = m_documentLayout->defaultTabSpacing() * qt_defaultDpiY() / 72.0;
+    }
+
+    qreal regularSpacedTabPos = 0; // first possible position
+    if (!qTabs.isEmpty()) {
+        regularSpacedTabPos = qTabs.last().position;
+    }
+
+    regularSpacedTabPos -= tabOffset * qt_defaultDpiY() / 72.0;
+    if (regularSpacedTabPos < 0) {
+        regularSpacedTabPos = -int(-regularSpacedTabPos / tabStopDistance) * tabStopDistance;
+    } else {
+        regularSpacedTabPos = (int(regularSpacedTabPos / tabStopDistance) + 1) * tabStopDistance;
+    }
+    regularSpacedTabPos += tabOffset * qt_defaultDpiY() / 72.0;
+
+    while (regularSpacedTabPos < MaximumTabPos) {
+        QTextOption::Tab tab;
+        tab.position = regularSpacedTabPos;
+        qTabs.append(tab);
+        regularSpacedTabPos += tabStopDistance;
+    }
+
     option.setTabs(qTabs);
 
     // conversion here is required because Qt thinks in device units and we don't
     option.setTabStop(tabStopDistance * qt_defaultDpiY() / 72.);
 
-
     layout->setTextOption(option);
 
+    // ==============
+    // Setup line and possibly restart paragraph continuing from previous other area
+    // ==============
+    QTextLine line;
     if (cursor->lineTextStart == -1) {
         layout->beginLayout();
         line = layout->createLine();
@@ -1011,123 +1072,48 @@ bool KoTextLayoutArea::layoutBlock(FrameIterator *cursor)
     m_blockRects.last().setLeft(m_blockRects.last().left() + qMin(m_indent, qreal(0.0)));
 
     // ==============
-    // List counter position
+    // List label/counter positioning
     // ==============
     if (textList && block.layout()->lineCount() == 1) {
         // If first line in a list then set the counterposition. Following lines in the same
         // list-item have nothing to do with the counter. Do this after borders so we can
         // account for them.
-        if (m_isRtl) {
-            m_width -= blockData->counterWidth() + blockData->counterSpacing() + m_listIndent;
-            if (listFormat.boolProperty(KoListStyle::AlignmentMode) == false) {
+        if (listFormat.boolProperty(KoListStyle::AlignmentMode) == false) {
+            if (m_isRtl) {
+                m_width -= blockData->counterWidth() + blockData->counterSpacing() + listFormat.doubleProperty(KoListStyle::Indent) + labelBoxWidth;
                 blockData->setCounterPosition(QPointF(right() -
                                                       blockData->counterWidth() - leftMargin, m_y));
             } else {
-                blockData->setCounterPosition(QPointF(right() - leftMargin, m_y));
+                m_x += listFormat.doubleProperty(KoListStyle::Indent) + labelBoxWidth;
+                m_width -= listFormat.doubleProperty(KoListStyle::Indent) + labelBoxWidth;
+                blockData->setCounterPosition(QPointF(x() - labelBoxWidth, m_y));
             }
-        } else {
-            if (listFormat.boolProperty(KoListStyle::AlignmentMode) == false) {
-                m_x += m_listIndent;
-                m_width -= m_listIndent;
-                blockData->setCounterPosition(QPointF(x() - listLabelIndent, m_y));
-            } else {
-                Qt::Alignment align = static_cast<Qt::Alignment>(listFormat.intProperty(KoListStyle::Alignment));
-                if (align & Qt::AlignLeft) {
-                    blockData->setCounterPosition(QPointF(x(), m_y));
-                    m_indent += listLabelIndent;
-                } else if (align & Qt::AlignHCenter) {
-                    listLabelIndent /= 2;
-                    blockData->setCounterPosition(QPointF(x() - listLabelIndent, m_y));
-                    m_indent += listLabelIndent/2;
-                } else {
-                    blockData->setCounterPosition(QPointF(x() - listLabelIndent, m_y));
-                }
-            }
-        }
+        } else if (labelBoxWidth > 0.0) { // Alignmentmode and there is a label
+            blockData->setCounterPosition(QPointF(x() - labelBoxWidth, m_y));
 
-        if (listFormat.boolProperty(KoListStyle::AlignmentMode)) {
             if (listFormat.intProperty(KoListStyle::LabelFollowedBy) == KoListStyle::ListTab) {
-                if (listFormat.hasProperty(KoListStyle::TabStopPosition)) {
-                    qreal listTab = listFormat.doubleProperty(KoListStyle::TabStopPosition);
-                    if (!m_documentLayout->relativeTabs(block)) {
-                        // How list tab is defined if fixed tabs:
-                        //        listTab
-                        //|>-------------------------|
-                        //           m_indent
-                        //         |---------<|
-                        //     LABEL                 TEXT STARTS HERE AND GOES ON
-                        //                    TO THE NEXT LINE
-                        //|>------------------|
-                        //     leftMargin
-                        listTab -= leftMargin;
-                    } else {
-                        // How list tab is defined if relative tabs:
-                        // It's relative to leftMargin - list.leftMargin
-                        //              listTab
-                        //       |>-------------------|
-                        //             m_indent
-                        //           |---------<|
-                        //       LABEL                 TEXT STARTS HERE AND GOES ON
-                        //                      TO THE NEXT LINE
-                        //|>--------------------|
-                        //     leftMargin       |
-                        //       |>-------------|
-                        //          list.margin
-                        listTab -= listFormat.doubleProperty(KoListStyle::Margin);
+                foreach(QTextOption::Tab tab, qTabs) {
+                    qreal position = tab.position  * 72. / qt_defaultDpiY();
+                    if (position > 0.0) {
+                        m_indent += position;
+                        break;
                     }
-                    // How list tab is defined now:
-                    //                    listTab
-                    //                    |>-----|
-                    //           m_indent
-                    //         |---------<|
-                    //     LABEL                 TEXT STARTS HERE AND GOES ON
-                    //                    TO THE NEXT LINE
-                    //|>------------------|
-                    //     leftMargin
-                    listTab -= m_indent;
-
-                    // And now listTab is like this:
-                    //         x()
-                    //         |     listTab
-                    //         |>---------------|
-                    //           m_indent
-                    //         |---------<|
-                    //     LABEL                 TEXT STARTS HERE AND GOES ON
-                    //                    TO THE NEXT LINE
-                    //|>------------------|
-                    //     leftMargin
-
-                    foreach(KoText::Tab tab, tabs) {
-                        qreal position = tab.position  * 72. / qt_defaultDpiY();
-                        if (position > 0.0) {
-                            // found the relevant normal tab
-                            if (position > listTab && listTab > 0.0) {
-                                // But special tab is more relevant
-                                position = listTab;
-                            }
-                            m_indent += position;
-                            break;
-                        }
-                    }
-
-                    //And finally it's like this:
-                    //                          x()
-                    //                    m_indent
-                    //                    |>-----|
-                    //     LABEL                 TEXT STARTS HERE AND GOES ON
-                    //                    TO THE NEXT LINE
-                    //|>------------------|
-                    //     leftMargin
-                } else {
-                    m_indent = 0;
                 }
+
+                //And finally it's like this:
+                //                          x()
+                //                    m_indent
+                //                    |>-----|
+                //     LABEL                 TEXT STARTS HERE AND GOES ON
+                //                    TO THE NEXT LINE
+                //|>------------------|
+                //     leftMargin
             } else if (listFormat.intProperty(KoListStyle::LabelFollowedBy) == KoListStyle::Space) {
                  QFontMetrics fm(labelFormat.font(), m_documentLayout->paintDevice());
                  m_indent += fm.width(' ');
             }
         }
     }
-
 
     // ==============
     // Create the lines of this paragraph
